--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="logo">
                 <h2> <i class="fa-solid fa-code"></i></h2>
             </div>
-            <nav >
+            <nav>
                 <ul class="nav">
                     <li><a href="#sobre">Sobre</a></li>
                     <li><a href="#projetos">Projetos</a></li>
@@ -78,39 +78,45 @@
     <section id="projetos" class="projects">
         <div class="container">
             <h2 class="section-title">Meus Projetos</h2>
+
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/placeholder.svg?height=200&width=350" alt="Projeto 1">
+                        <img src="img/Project1.png" alt="Projeto 1">
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <a href="https://clinicabomsorriso.online/" class="project-link"><i
+                                    class="fas fa-external-link-alt"></i></a>
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Nome do Projeto 1</h3>
-                        <p>Descrição breve do projeto aqui</p>
+                        <h3>Clinica Bom Sorriso</h3>
+                        <p>Landing Page para Clinica Odontológica</p>
                         <div class="project-tags">
-                            <span>HTML</span>
+                            <span>TypeScript</span>
                             <span>CSS</span>
                             <span>JavaScript</span>
+                            <Span>NextJs</Span>
                         </div>
                     </div>
                 </div>
 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="/placeholder.svg?height=200&width=350" alt="Projeto 2">
+                        <img src="img/Project2.1.png" alt="Projeto 2">
                         <div class="project-overlay">
-                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                            <!-- <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a> -->
                         </div>
                     </div>
                     <div class="project-content">
-                        <h3>Nome do Projeto 2</h3>
-                        <p>Descrição breve do projeto aqui</p>
+                        <h3>PYGG KPI</h3>
+                        <p>Sistema de Dashboards para fins Lucrativos e Analise Empresarial</p>
                         <div class="project-tags">
                             <span>React</span>
                             <span>Node.js</span>
-                            <span>MongoDB</span>
+                            <span>JavaScript</span>
+                            <span>HTML</span>
+                            <span>FireBird</span>
+                            <span>CSS</span>
                         </div>
                     </div>
                 </div>
@@ -133,6 +139,24 @@
                     </div>
                 </div>
 
+                <!-- <div class="project-card">
+                    <div class="project-image">
+                        <img src="/placeholder.svg?height=200&width=350" alt="Projeto 4">
+                        <div class="project-overlay">
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Nome do Projeto 4</h3>
+                        <p>Descrição breve do projeto aqui</p>
+                        <div class="project-tags">
+                            <span>Next.js</span>
+                            <span>TypeScript</span>
+                            <span>Stripe</span>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="project-card">
                     <div class="project-image">
                         <img src="/placeholder.svg?height=200&width=350" alt="Projeto 4">
@@ -150,8 +174,24 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="/placeholder.svg?height=200&width=350" alt="Projeto 4">
+                        <div class="project-overlay">
+                            <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3>Nome do Projeto 4</h3>
+                        <p>Descrição breve do projeto aqui</p>
+                        <div class="project-tags">
+                            <span>Next.js</span>
+                            <span>TypeScript</span>
+                            <span>Stripe</span>
+                        </div>
+                    </div>
+                </div> -->
     </section>
 
     <!-- Seção Habilidades  -->
@@ -250,10 +290,10 @@
                         <i class="fa-solid fa-desktop"></i>
                         <span>Delhpi</span>
                     </div>
-                    <div class="skill-icon">
+                    <!-- <div class="skill-icon">
                         <i class="fab fa-dev"></i>
                         <span>DevOps</span>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -280,9 +320,11 @@
                         <span>Jaragua do Sul, SC</span>
                     </div>
                     <div class="social-links">
-                        <a href="https://www.linkedin.com/in/nicolas-pelens-26b280373/"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/nicolas-pelens-26b280373/"><i
+                                class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/NicolasPelens"><i class="fab fa-github"></i></a>
-                        <a href="https://www.instagram.com/nicolas_pelens?igsh=MTMwOTB3MGlxaXp0cA=="><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/nicolas_pelens?igsh=MTMwOTB3MGlxaXp0cA=="><i
+                                class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <form class="contact-form">
@@ -296,8 +338,9 @@
                         <textarea id="mensagem" name="mensagem" placeholder="Sua mensagem" rows="5" required></textarea>
                     </div>
                     <button type="submit" class="submit-button">Enviar Mensagem</button>
-                    
-                    <a href="https://wa.me/5547992856904?text=Olá! Vi seu portfólio e gostaria de conversar sobre um projeto." class="whatsapp-button" target="_blank">
+
+                    <a href="https://wa.me/5547992856904?text=Olá! Vi seu portfólio e gostaria de conversar sobre um projeto."
+                        class="whatsapp-button" target="_blank">
                         <i class="fab fa-whatsapp"></i>
                         Conversar no WhatsApp
                     </a>
